# notifications_template

./: .gitignore  README.md  TODO.txt  docker-compose.yml  pyproject.toml
app/: main.py  requirements.txt
app/db/: __init__.py  db_config.py  models.py  schemas.py
app/services/: email.py  user.py
docker/: Dockerfile_api  Dockerfile_email_sender
email/: dead_letters_worker.py  email_worker.py  run_workers.sh  send_mail.py
