[tool.poetry]
name = "notifications-sprint-1"
version = "0.1.0"
description = ""
authors = ["kbondar17 <aa@bb.mail.ru>"]
readme = "README.md"
packages = [{include = "notifications_sprint_1"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.5"}
passlib = "^1.7.4"
sqlalchemy = "^2.0.5.post1"
aiosqlite = "^0.18.0"
pika = "^1.3.1"
psycopg2-binary = "^2.9.5"
loguru = "^0.6.0"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
